--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter-api:5.8.1',
+            'org.mockito:mockito-core:5.18.0',
+            'org.mockito:mockito-junit-jupiter:5.18.0'
+    )
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
